###### TWE 5.4-1 RELEASED ######
   # Shark mode: supported enhancement of FOPToolAgent

###### TWE 5.3-1 RELEASED (2016-01-21) ######
2015-01-06 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported special shark deadline expressions (new script type text/sharkwfdeadlines)

2016-01-06 Warut Dechma <warut@together.at>
   # Only Java 8 is now offered during installation procedure
   
2015-12-24 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for new extended attribute "EVALUATE_DYNAMICSCRIPT_VARIABLE_FOR_TOOL_AGENT_ACTIVITIES"

###### TWE 5.2-3 RELEASED (2015-12-17) ######
2015-12-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for FOPToolAgent      

2015-12-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Improved support for TSCToolAgent
      - Improved support for XSLTToolAgent

2015-12-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for TSCToolAgent

###### TWE 5.2-2 RELEASED (2015-11-04) ######
2015-10-05 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for REEVALUATE_DEADLINES extended attribute

2015-09-21 Sasa Bojanic <sasaboy@together.at>
   # Implemented possibility to D&D XPDL file

2015-09-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Improved recognition of I18N variables usage inside expressions
      
2015-09-16 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Implemented support for new extended attributes of SMTPNewProcFileSysLogErrorHandler (NEWPROC_ERROR_HANDLER_NEW_PROCESS_PACKAGE_ID and NEWPROC_ERROR_HANDLER_NEW_PROCESS_WORKFLOWPROCESS_ID)

###### TWE 5.2-1 RELEASED (2015-09-15) ######
2015-09-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Implemented support (GUI + validation) for new system variables for holding information about the last process instance activity 
                 that failed to execute: shark_process_error_message, shark_process_error_stacktrace and shark_process_error_activity_id
