@@ -1,8 +1,12 @@
 ###### TWE 5.4-1 RELEASED ######
+2016-02-05 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: fixed the logic to display references of Package defined XPDL string variables (duplicated references were counted)
+
+2016-01-27 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: supported enhancement of FOPToolAgent
 
 ###### TWE 5.3-1 RELEASED (2016-01-21) ######
-2015-01-06 Sasa Bojanic <sasaboy@together.at>
+2016-01-06 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: supported special shark deadline expressions (new script type text/sharkwfdeadlines)
 
 2016-01-06 Warut Dechma <warut@together.at>
